# cookiecutter-python

./: cookiecutter.json
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: noxfile.py  pyproject.toml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.devcontainer/: Dockerfile  devcontainer.json
